--- a/nlp.html
+++ b/nlp.html
@@ -155,7 +155,7 @@ on various websites and social media platforms that will then be used for?...</p
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://careers-guidehouse.icims.com/jobs/2393/ai-data-scientist-nlp-engineer/job'>AI Data Scientist/NLP Engineer in Washington DC | Careers at 109</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-guidehouse.icims.com/jobs/2393/ai-data-scientist-nlp-engineer/job'>AI Data Scientist/NLP Engineer in Washington DC | Careers at 109</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... 109 is now hiring a AI Data Scientist/NLP Engineer in Washington DC. Review all 
 of the job details and apply today!</p>
@@ -194,7 +194,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Seattle Irvine</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/healthfidelity/jobs/1886165'>Job Application for Clinical Coding and NLP Analyst at Health Fidelity</a></h5> 
+<h5><a href='https://boards.greenhouse.io/healthfidelity/jobs/1886165'>Job Application for Clinical Coding and NLP Analyst at Health Fidelity</a></h5> 
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
@@ -206,7 +206,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/QuriousAssociatesLimited/743999695334345-data-scientist-nlp'>Qurious Associates Limited Data Scientist - NLP | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/QuriousAssociatesLimited/743999695334345-data-scientist-nlp'>Qurious Associates Limited Data Scientist - NLP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -267,7 +267,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-09-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thehub.fi/jobs/nlp-data-engineer-and-data-scientist'>The Hub | NLP Data Engineer &amp; Data Scientist @ Meeshkan</a></h5> 
+<h5><a href='https://thehub.fi/jobs/nlp-data-engineer-and-data-scientist'>The Hub | NLP Data Engineer &amp; Data Scientist @ Meeshkan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-20</p>
 <hr/>
@@ -295,7 +295,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='https://thematic.workable.com/j/6F11552079'>Thematic - Jobs: Senior Data Scientist NLP - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thematic.workable.com/j/6F11552079'>Thematic - Jobs: Senior Data Scientist NLP - Apply online</a></h5> 
 <p><span class="badge badge-light">New Zealand Auckland</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -324,11 +324,11 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1851526'>Job Application for Research Internship - Spring 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1851526'>Job Application for Research Internship - Spring 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rasa/jobs/4401998002'>Job Application for Solutions Engineer - NLP (m/f/x) at Rasa</a></h5> 
+<h5><a href='https://boards.greenhouse.io/rasa/jobs/4401998002'>Job Application for Solutions Engineer - NLP (m/f/x) at Rasa</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -365,7 +365,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://causaly.workable.com/j/9105710815'>Causaly - Jobs: Senior NLP Engineer (Information Extraction) - Apply online</a></h5> 
+<h5><a href='https://causaly.workable.com/j/9105710815'>Causaly - Jobs: Senior NLP Engineer (Information Extraction) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-08-31</p>
 <hr/>
@@ -377,7 +377,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
-<h5><a href='https://adarga.recruitee.com/o/natural-language-processing-data-scientist'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adarga.recruitee.com/o/natural-language-processing-data-scientist'>
       Natural Language Processing Data Scientist - Adarga
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -387,7 +387,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-08-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axur.workable.com/j/62624C2C7B'>Axur. Digital Risk Protection - Jobs: Machine Learning Analyst - NLP - Apply online</a></h5> 
+<h5><a href='https://axur.workable.com/j/62624C2C7B'>Axur. Digital Risk Protection - Jobs: Machine Learning Analyst - NLP - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-25</p>
 <hr/>
@@ -415,7 +415,7 @@ Barcelona. Review all of the job details and apply today!</p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Norweigan 
 in Barcelona. Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://amplexor.workable.com/j/72EF9FC811?viewed=true'>Senior NLP Engineer - Apply online - Amplexor - Jobs</a></h5> 
+<h5><a href='https://amplexor.workable.com/j/72EF9FC811?viewed=true'>Senior NLP Engineer - Apply online - Amplexor - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 12, 2019 ... Apply online for the job of Senior NLP Engineer at Amplexor.</p>
 <hr/>
@@ -435,7 +435,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Santa Monica, California</span></p>
 <p>Posted on: 2019-08-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/KLOVi1n1C9/Senior-Data-Scientist-NLP'>Senior Data Scientist, NLP - Fractal Analytics - Career Page</a></h5> 
+<h5><a href='http://fractalanalytics.applytojob.com/apply/KLOVi1n1C9/Senior-Data-Scientist-NLP'>Senior Data Scientist, NLP - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Mumbai, Maharashtra, India</span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
@@ -443,7 +443,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genesys.referrals.selectminds.com/jobs/staff-software-engineer-nlu-nlp-3768'>Staff Software Engineer (NLU/ NLP) - Genesys Careers</a></h5> 
+<h5><a href='https://genesys.referrals.selectminds.com/jobs/staff-software-engineer-nlu-nlp-3768'>Staff Software Engineer (NLU/ NLP) - Genesys Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-15</p>
 <hr/>
@@ -452,7 +452,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p>6 days ago ... Some of the research projects can involve parsing, language modelling, machine 
 translation, sentiment analysis, recommendation systems, deep learning,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gumgum/job/oTTpafw5'>GumGum Careers - NLP Data Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/gumgum/job/oTTpafw5'>GumGum Careers - NLP Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 2, 2019 ... Description. Using state-of-the-art machine learning and big data techniques, 
 GumGum enables highly impactful digital advertising campaigns with contextual
@@ -462,7 +462,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114595-internship-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Internship in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114595-internship-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Internship in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -483,7 +483,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p>6 days ago ... Apply to Senior Data Scientist, NLP at Fractal Analytics in Mumbai, Maharashtra, 
 India.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 27, 2019 ... Apply online for the job of NLP Engineer at Amplexor.</p>
 <hr/>
